Added services collection with CRUD routes
