# models/service.js
@@ -1,0 +1,34 @@
+import mongoose from 'mongoose';
+
+const serviceSchema = new mongoose.Schema({
+    name: {
+        type: String,
+        required: true
+    },
+    provider: {
+        type: String,
+        required: true
+    },
+    price: {
+        type: Number,
+        required: true
+    },
+    duration: {
+        type: String,
+        required: true
+    },
+    category: {
+        type: String,
+        required: true
+    },
+    location: {
+        type: String,
+        required: true
+    },
+    contactEmail: {
+        type: String,
+        required: true
+    }
+}, { timestamps: true });
+
+export default mongoose.model('Service', serviceSchema);
